--- a/css/global/variables.css
+++ b/css/global/variables.css
@@ -1,4 +1,5 @@
-:root{
-    --white: #ffffff;
-    --dark-pine-green: #1D2F30;
+:root {
+  --white: #ffffff;
+  --dark-pine-green: #1d2f30;
+  --energos: #bae249;
 }
