--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -1,3 +1,4 @@
 @import url("./common.css");
 @import url("./header/header.css");
 @import url("./get-started/get-started.css");
+@import url("./artefacts/artefacts.css");
