--- a/css/pages/get-started/get-started.css
+++ b/css/pages/get-started/get-started.css
@@ -24,7 +24,7 @@
   width: 688px;
   padding-bottom: 24px;
 
-  font-family: Open-Sans;
+  font-family: "Open-Sans", sans-serif;
   font-weight: 400;
 
   font-size: 16px;
@@ -36,5 +36,8 @@
   width: 160px;
   align-items: center;
   gap: 8px;
+
+  font-family: "Open-Sans", sans-serif;
+  font-weight: 700;
   color: var(--energos);
 }
