--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -2,3 +2,4 @@
 @import url("./header/header.css");
 @import url("./get-started/get-started.css");
 @import url("./artefacts/artefacts.css");
+@import url("./new-artefacts/new-artefacts.css");
