--- a/css/pages/get-started/get-started.css
+++ b/css/pages/get-started/get-started.css
@@ -33,11 +33,12 @@
 
 .get-started__link {
   display: flex;
-  width: 160px;
+ 
   align-items: center;
   gap: 8px;
 
   font-family: "Open-Sans", sans-serif;
   font-weight: 700;
+  font-size: 16px;
   color: var(--energos);
 }
