Сделал блок help-proj

--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -3,3 +3,4 @@
 @import url("./get-started/get-started.css");
 @import url("./artefacts/artefacts.css");
 @import url("./new-artefacts/new-artefacts.css");
+@import url("./help-proj/help-proj.css");
