--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -4,3 +4,4 @@
 @import url("./artefacts/artefacts.css");
 @import url("./new-artefacts/new-artefacts.css");
 @import url("./help-proj/help-proj.css");
+@import url("./footer/footer.css");
