--- a/css/pages/header/header.css
+++ b/css/pages/header/header.css
@@ -1,44 +1,44 @@
-.header{
-    background-color: var(--dark-pine-green);
-    padding: 18px 0 18px 0;
+.header {
+  background-color: var(--dark-pine-green);
+  padding: 18px 0 18px 0;
 }
 
-.header__container{
-    display: flex;
-    justify-content: space-between;
+.header__container {
+  display: flex;
+  justify-content: space-between;
 }
-
 
 .header__logo img {
-    width: 100%;
-    height: auto;
-    vertical-align: middle;
+  width: 100%;
+  height: auto;
+  vertical-align: middle;
 }
 
-.header__menu{
-    display: flex;
-    gap: 296px;
-    align-items: center;
+.header__menu {
+  display: flex;
+  gap: 296px;
+  align-items: center;
 }
 
-.header__list{
-    display: flex;
-    gap: 64px;
+.header__list {
+  display: flex;
+  gap: 64px;
 
-    font-size: 16px;
-    font-family: "Open-Sans", sans-serif;
-    font-weight: 400;
+  font-size: 16px;
+  font-family: 'Open-Sans', sans-serif;
+  font-weight: 400;
 }
 
-.header__link{
-    color: var(--white);
+.header__link {
+  color: var(--white);
+  white-space: nowrap;
 }
 
-.menu-buttons__list{
-    display: flex;
-    gap: 64px;
+.menu-buttons__list {
+  display: flex;
+  gap: 64px;
 }
 
 .menu-buttons__item img {
-    vertical-align: middle;
+  vertical-align: middle;
 }
