Добавил элементы при наведении

--- a/css/global/variables.css
+++ b/css/global/variables.css
@@ -5,4 +5,6 @@
   --black-stallion: #0B1919;
   --boredom: #899D9D;
   --green-leaf: #506829;
+  --disco-ball: #d4d4d4;
+  --lime-it-or-leave-it: #91AC46;
 }
