--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -6,4 +6,7 @@
 @import url('./help-proj/help-proj.css');
 @import url('./footer/footer.css');
 
+@import url('./media/media1150.css') (max-width: 1150px);
 @import url('./media/media380.css') (max-width: 380px);
+
+
