--- a/css/pages/media/media380.css
+++ b/css/pages/media/media380.css
@@ -13,12 +13,6 @@
     gap: 15px;
   }
 
-  .header__list {
-    flex-direction: column;
-    gap: 15px;
-    text-align: center;
-  }
-
   .menu-buttons__list {
     gap: 15px;
   }
@@ -47,7 +41,8 @@
   }
 
   .gallery {
-    flex-direction: column;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, 1fr);
   }
 
   .artefacts__slider {
