--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -8,4 +8,5 @@
 
 @import url('./media/media1200.css') (max-width: 1200px);
 @import url('./media/media768.css') (max-width: 768px);
+@import url('./media/media580.css') (max-width: 580px);
 @import url('./media/media380.css') (max-width: 380px);
