--- a/css/pages/media/media580.css
+++ b/css/pages/media/media580.css
@@ -35,7 +35,7 @@
   }
 
   .gallery {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(1, 255px);
     grid-template-rows: repeat(4, 1fr);
   }
 
